--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
     defaultConfig {
-        applicationId "com.chrisx.ricochet"
+        applicationId "com.chrisx.theia"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
