--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen">
         <activity
             android:name="com.chrisx.theia.MainActivity"
-            android:screenOrientation="portrait">
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
